Added a jet image et al

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a paragraph element. Cool huh?</p>
-<a href="http://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html> 
+<head>
+	<title>Top Gun Baby</title>
+</head>
+<body>
+	<h1>Hey. I'm a big heading</h1>
+	<p>Hey. I'm a <b>paragraph</b> element. Cool huh?</p>
+	<a href="http://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+	<p>My name is: <br>
+	<b>Top Gun</p>
+	<img src="https://g.foolcdn.com/editorial/images/168693/f-16.jpg">
+</body>
+</html>
